# mysandbox2

./: pyproject.toml  readme.md
mysandbox2/: calculator.py  core.py  optimizer.py
scripts/: 20240207_002117.db  gp_model.py  history-100-BoTorch.pkl  history-100-MOTPE.pkl  history-100-None.pkl  history-Powell.pkl  history-SLSQP.pkl  history-nelder-mead.pkl  history-trust-constr.pkl  history.pkl  main.py  main_scipy.py
