[tool.poetry]
name = "mysandbox2"
version = "0.1.0"
description = ""
authors = ["knsplash <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
optuna = "^3.5.0"
botorch = "^0.9.5"
dask = {extras = ["distributed"], version = "^2024.1.1"}
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
